--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^3.31.0",
     "@types/styled-components": "^5.1.34",
     "es-toolkit": "^1.25.2",
     "react": "^18.3.1",
