--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/aiplatform": "^3.31.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "es-toolkit": "^1.25.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
